Refactoring logic of DAO classes