@@ -22,31 +22,38 @@ public class TopicoAdicionarServlet extends HttpServlet {
 	protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
 
 		Connection connection = (Connection) request.getAttribute("connection");
-		
 		BlackList blackList = new BlackList();
+
+		String idTopico = request.getParameter("idTopico");
 		
-		String texto = request.getParameter("texto");
 		String idPai = request.getParameter("idPai");
+		String texto = request.getParameter("texto");
+		String nivel = request.getParameter("nivel");
 		
 		String textoVerificado = null;
 		
 		try {
 			textoVerificado = blackList.verificar(texto, connection);
-		} catch (SQLException e1) {
+		} catch (SQLException e) {
 		}
-		
+
 		Topico topico = new Topico();
 		topico.setTexto(textoVerificado);
-		topico.setIdPai(new Long(idPai));
-		
-		TopicoDAO dao = new TopicoDAO(connection);
-		
+		topico.setIdPai(Long.valueOf(idPai));
+		topico.setNivel(Long.valueOf(nivel));
+
 		try {
+			TopicoDAO dao = new TopicoDAO(connection);
 			dao.adiciona(topico);
 		} catch (SQLException e) {
 		}
 		
-		request.getRequestDispatcher("/forum").forward(request, response);
+		boolean ehTopico = idTopico == null || idTopico.equals("null");
+		
+		if(ehTopico)
+			response.sendRedirect("forum");
+		else
+			response.sendRedirect("topicoListar?t=" + idTopico);
 			
 	}
 
